<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="36dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="28dp"
            android:textSize="@dimen/textSizeMain2"
            android:textColor="#383838"
            android:lineHeight="20sp"
            android:text="@string/txt_send_declaration_confirm"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/heightSeparator"
            android:background="#656565"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_negative"
                android:layout_width="@dimen/widthConstrained"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/textSizeMain"
                android:textColor="#656565"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAllCaps="true"
                android:fontFamily="@font/helvetica_neue_thin"
                android:background="@android:color/white"
                android:text="@string/lbl_cancel"/>

            <View
                android:layout_width="@dimen/heightSeparator"
                android:layout_height="match_parent"
                android:background="#656565" />

            <Button
                android:id="@+id/btn_positive"
                android:layout_width="@dimen/widthConstrained"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/textSizeMain"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAllCaps="true"
                android:background="@android:color/white"
                android:text="@string/lbl_accept"/>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
